--- a/header.html
+++ b/header.html
@@ -1,3 +1,3 @@
-<div class="header_banner">
-    <h1>PinoGit!</h1>
-</div>
+<a href="https://git.danieliu.xyz">
+    <img src="static/gitosaur_banner.png" alt="gitosaur banner"/>
+</a>
