--- a/header.html
+++ b/header.html
@@ -1,3 +1,3 @@
-<a href="https://git.danieliu.xyz">
-    <img src="static/gitosaur_banner.png" alt="gitosaur banner"/>
+<a  href="https://git.danieliu.xyz">
+    <img class="gitosaur_logo" src="static/gitosaur_banner.png" alt="gitosaur banner"/>
 </a>
